example/e-one/kubeBackend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-backend
  labels:
    app: node-backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-backend-app
  template:
    metadata:
      labels:
        app: node-backend-app
    spec:
      containers:
      - name: node-backend
        image: pengmmm/node-backend:latest
        ports:
        - containerPort: 3000
