example/e-one/kubeBackend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-backend
spec:
  selector:
    app: node-backend-app
  ports:
    - protocol: TCP
      port: 8448
      targetPort: 3000
      nodePort: 32217
  type: NodePort
